# UWB_Sim

./: README.md  pyproject.toml
configs/: default.yaml
scripts/: compute_gdop_for_pareto.py  make_pareto.py  run_batch.py
src/uwb_sim/app/: streamlit_app.py
src/uwb_sim/estimation/: multilateration.py
src/uwb_sim/io/: config_loader.py  exporters.py  paths.py
src/uwb_sim/metrics/: accuracy.py  gdop.py  profiler.py
src/uwb_sim/scenario/: patterns.py
src/uwb_sim/simulation/: measurement.py  runner.py  trajectory.py
