[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "uwb-sim"
version = "0.1.0"
description = "2D UWB anchor-based localization simulator (100m x 100m) with interactive UI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Akari Hirohara" }
]
dependencies = [
  "numpy>=2.0",
  "scipy>=1.10",
  "matplotlib>=3.8",
  "pandas>=2.2",
  "PyYAML>=6.0",
  "streamlit>=1.36"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/uwb_sim"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
